<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/categories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_grade"
            android:title="@string/weeks" />
        <item
            android:id="@+id/nav_choose_class_time"
            android:icon="@drawable/ic_assignment"
            android:title="@string/choose_time_for_classes" />
        <item
            android:id="@+id/nav_moodle"
            android:checkable="false"
            android:icon="@drawable/ic_web_moodle"
            android:title="@string/moodle" />
    </group>

    <group
        android:id="@+id/subcategories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
