<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/schedule_fragment"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/layout_padding"
tools:context="lt.chocolatebar.ktustudentams.fragments.ScheduleFragment">

    <TextView
        android:id="@+id/tekstas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Schedule fragment test"
        android:textSize="20dp" />

</FrameLayout>