<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context="lt.chocolatebar.ktustudentams.fragments.OptionsFragment">

    <ListPreference
        android:defaultValue="@string/schedule"
        android:entries="@array/default_fragments"
        android:entryValues="@array/default_fragments"
        android:key="list_pref_default_fragment"
        android:summary="%s"
        android:title="@string/default_screen" />

    <PreferenceCategory android:title="@string/notification_settings">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_notifications"
            android:summary="@string/notifications_turn_on_off"
            android:title="@string/notifications" />

        <ListPreference
            android:defaultValue="30"
            android:dependency="switch_notifications"
            android:entries="@array/scraper_timer"
            android:entryValues="@array/scraper_timer_values"
            android:key="list_pref_scraper_timer"
            android:summary="%s"
            android:title="@string/update_interval" />

    </PreferenceCategory>

</PreferenceScreen>