<resources>
    <string name="app_name">KTU Studentams</string>

    <string name="loading">Kraunasi&#8230;</string>
    <string name="please_wait">Prašome palaukti</string>

    <string name="no_internet">Nėra interneto</string>
    <string name="failure">Operacijos klaida. Prašome pabandyti vėliau</string>

    <!-- Login -->
    <string name="username">Prisijungimo vardas</string>
    <string name="password">Slaptažodis</string>
    <string name="login">Prisijungti</string>

    <string name="enter_username">Įrašykite prisijungimo vardą</string>
    <string name="enter_password">Įrašykite slaptažodį</string>
    <string name="incorrect_username_or_password">Neteisingas prisijungimo vardas arba slaptažodis</string>

    <!-- Side menu -->
    <string name="schedule">Tvarkaraštis</string>
    <string name="weeks">Pažymiai</string>
    <string name="choose_time_for_classes">Užsirašymas į užsiėmimus</string>
    <string name="settings">Nustatymai</string>
    <string name="moodle">Moodle naršyklėje</string>
    <string name="logout">Atsijungti</string>
    <string name="drawer_open">Atidaryti šoninį meniu</string>
    <string name="drawer_close">Uždaryti šoninį meniu</string>

    <!-- Settings -->
    <string name="default_screen">Pradinis ekranas</string>
    <string name="update_interval">Atnaujinimų intervalas</string>
    <string name="notification_settings">Pranešimų nustatymai</string>
    <string name="notifications">Pranešimai</string>
    <string name="notifications_turn_on_off">Įjungti arba išjungti pranešimus</string>
    <string-array name="scraper_timer">
        <item>5 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 val</item>
        <item>3 val</item>
        <item>5 val</item>
    </string-array>
    <string-array name="scraper_timer_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string-array name="default_fragments">
        <item>@string/schedule</item>
        <item>@string/weeks</item>
        <item>@string/choose_time_for_classes</item>
    </string-array>

    <!-- Grades -->
    <string name="select_semester">Pasirinkite semestrą</string>
    <string name="select_module">Pasirinkite modulį</string>
    <string name="no">Nr.</string>
    <string name="name">Pavadinimas</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>

</resources>
